--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -16,4 +16,4 @@ summary:
   - Küçük, eğlenceli projeler üzerinde çalışmayı seviyorum
   - Özgür uygulamar geliştiriyorum
   - Linux ile çalışmayı seviyorum
-  - Bir yandan da web tasarım ile ilgileniyorum
+  - Mobil programlama üzerinde çalışıyorum
