--- a/data/en/sections/education.yaml
+++ b/data/en/sections/education.yaml
@@ -15,7 +15,7 @@ degrees:
   timeframe: 2020-2024
   institution:
     name: İstanbul Ayvansaray Üniversitesi
-    url: "#"
+    url: "www.ayvansaray.edu.tr"
   grade: #(optional)
     scale: GNO
     achieved: "2.6"
