--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -14,6 +14,6 @@ summary:
   - Yazılım Mühendisliği Öğrencisiyim
   - Şu an C++ öğreniyorum  
   - Küçük, eğlenceli projeler üzerinde çalışmayı seviyorum
-  - Özgür uygulamar geliştiriyorum
+  - Özgür uygulamalar geliştiriyorum
   - Linux ile çalışmayı seviyorum
   - Mobil programlama üzerinde çalışıyorum
