--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -38,3 +38,13 @@ projects:
   #url: ""
   summary: Data Structures.
   tags: ["professional", "Data-Structures"]
+
+  projects:
+- name: Encapsulation
+  logo: /images/sections/projects/cpp.png
+  role: Developer
+  timeline: "August 2021- Present"
+  repo: https://github.com/Mehmet346/Encapsulation-Cpp # If your project is a public repo on GitHub, then provide this link. it will show star count.
+  #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
+  summary: encapsulation in cpp language.
+  tags: ["professional", "Encapsulation", "C++"]
