--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -39,7 +39,6 @@ projects:
   summary: Data Structures.
   tags: ["professional", "Data-Structures"]
 
-  projects:
 - name: Encapsulation
   logo: /images/sections/projects/cpp.png
   role: Developer
@@ -48,3 +47,13 @@ projects:
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
   summary: encapsulation in cpp language.
   tags: ["professional", "Encapsulation", "C++"]
+  
+- name: Constructer
+  logo: /images/sections/projects/cpp.png
+  role: Developer
+  timeline: "September 2021- Present"
+  repo: https://github.com/Mehmet346/Constructer # If your project is a public repo on GitHub, then provide this link. it will show star count.
+  #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
+  summary: Constructer in cpp language.
+  tags: ["professional", "Constructer", "C++"]
+
