--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -17,8 +17,8 @@ experiences:
     overview: "Perakende satış sektörünün öncülerinden 10000'den fazla mağazasıyla Türkiye'nin ileri gelen market zinciri."
   positions:
   - designation: Mağaza Temsilcisi
-    start: Aug. 2020
-    end: Nov 2021
+    start: Ağustos 2020
+    end: Kasım 2021
     responsibilities:
     - Mağaza düzeninin takibi.
     - Personel yönetimi.
