--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -18,7 +18,7 @@ company:
 resume: "files/resume.pdf"
 
 # a summary about you
-summary: "Bir yandan İstanbul Ayvansaray Üniversitesi'nde Yazılım Mühendisliği öğrenimime devam ederken bir yandan da A-101 bünyesinde mağaza temsilcisi olarak çalışıyorum. Takım çalışmasını seven, liderlik konusunda sorumluluk alabilen birisiyim. Gelişime açık, dinamik ve her zaman ideallerine ulaşmak için çabalayan bir Yazılım Mühendisi adayıyım."
+summary: "Şu anda İstanbul Ayvansaray Üniversitesi'nde Yazılım Mühendisliği öğrenimime devam ediyorum. Takım çalışmasını seven, liderlik konusunda sorumluluk alabilen birisiyim. Gelişime açık, dinamik ve her zaman ideallerine ulaşmak için çabalayan bir Yazılım Mühendisi adayıyım."
 # your social links
 # give as many as you want. use font-awesome for the icons.
 socialLinks:
