--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -11,7 +11,7 @@ contactInfo:
 
 # some summary about what you do
 summary:
-  - Makine Mühendisliği Öğrencisiyim
+  - Yazılım Mühendisliği Öğrencisiyim
   - Şu an C++ öğreniyorum  
   - Küçük, eğlenceli projeler üzerinde çalışmayı seviyorum
   - Özgür uygulamalar geliştiriyorum
