--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -21,6 +21,24 @@ buttons:
 
 # your projects
 projects:
+- name: Clash Of Clans
+  logo: /images/sections/projects/cpp.png
+  role: Developer
+  timeline: "September 2021 - Present"
+  repo: https://github.com/Mehmet346/Clash-of-Clans # If your project is a public repo on GitHub, then provide this link. it will show star count.
+  #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
+  summary: Clash Of clans game in cpp language.
+  tags: ["professional", "Clash Of Clans", "C++"]
+
+- name: script fotball animation
+  logo: /images/sections/projects/JavaScript.png
+  role: Developer
+  timeline: "January 2022 - January 2022"
+  repo: https://github.com/Mehmet346/little-fotball-game-script # If your project is a public repo on GitHub, then provide this link. it will show star count.
+  #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
+  summary: script fotball game in Html/Css and JavaScript language.
+  tags: ["professional", "Script game", "Html", "CSS", "JavaScript"]
+
 - name: Linked List
   logo: /images/sections/projects/cpp.png
   role: Developer
@@ -29,33 +47,6 @@ projects:
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
   summary: Production-Grade Container Scheduling and Management.
   tags: ["professional", "LinkedList", "C++"]
-
-- name: Data Structures
-  logo: /images/sections/projects/cpp.png
-  role: Developer
-  timeline: "April 2021 - Present"
-  repo: https://github.com/Mehmet346/Mehmet
-  #url: ""
-  summary: Data Structures.
-  tags: ["professional", "Data-Structures"]
-
-- name: Encapsulation
-  logo: /images/sections/projects/cpp.png
-  role: Developer
-  timeline: "August 2021 - Present"
-  repo: https://github.com/Mehmet346/Encapsulation-Cpp # If your project is a public repo on GitHub, then provide this link. it will show star count.
-  #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: encapsulation in cpp language.
-  tags: ["professional", "Encapsulation", "C++"]
-  
-- name: Constructer
-  logo: /images/sections/projects/cpp.png
-  role: Developer
-  timeline: "September 2021 - Present"
-  repo: https://github.com/Mehmet346/Constructer # If your project is a public repo on GitHub, then provide this link. it will show star count.
-  #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: Constructer in cpp language.
-  tags: ["professional", "Constructer", "C++"]
 
 - name: Object Detection
   logo: /images/sections/projects/py.png
