--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -22,7 +22,7 @@ skills:
 
 - name: C++
   logo: /images/sections/skills/c++.png
-  summary: "Temel C/C++ programlamayı biliyorum. Programlama ve problem çözme için kullanabilirim."
+  summary: "Orta seviye C/C++ programlamayı biliyorum. Programlama ve problem çözme için kullanabilirim."
   
 - name: HTML/CSS
   logo: /images/sections/skills/Html-Css.png
