--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -32,7 +32,7 @@ socialLinks:
 
 - name: Stackoverflow
   icon: "fab fa-stack-overflow"
-  url: "#"
+  url: "https://stackoverflow.com/users/16241571/mehmet-ali-%c3%96zdo%c4%9fan"
 
 - name: LinkedIn
   icon: "fab fa-linkedin"
@@ -44,7 +44,7 @@ socialLinks:
 
 - name: Facebook
   icon: "fab fa-facebook"
-  url: "#"
+  url: "https://www.instagram.com/mr.ozdgnx/?hl=tr"
 
 # Show your badges
 # You can show your verifiable certificates from https://www.credly.com.
