--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -24,7 +24,7 @@ projects:
 - name: Clash Of Clans
   logo: /images/sections/projects/cpp.png
   role: Developer
-  timeline: "September 2021 - Present"
+  timeline: "September 2021 - January"
   repo: https://github.com/Mehmet346/Clash-of-Clans # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
   summary: Clash Of clans game in cpp language.
