--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -37,7 +37,7 @@ projects:
   repo: https://github.com/Mehmet346/little-fotball-game-script # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
   summary: script fotball game in Html/Css and JavaScript language.
-  tags: ["Beginner", "Html", "CSS", "JavaScript"]
+  tags: ["Beginner", "Html", "Css", "JavaScript"]
 
 - name: Object Detection
   logo: /images/sections/projects/py.png
