--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -14,6 +14,6 @@ summary:
   - Yazılım Mühendisliği Öğrencisiyim
   - Şu an Flutter öğreniyorum  
   - Mobil programlama üzerinde çalışıyorum
-  - Küçük, eğlenceli projeler üzerinde çalışmayı seviyorum
+  - Cross platformlar üzerinde çalışmayı seviyorum
   - Özgür uygulamalar geliştiriyorum
   - Linux ile çalışmayı seviyorum
