--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -24,7 +24,7 @@ summary: "Şu anda İstanbul Topkapı Üniversitesi'nde Yazılım Mühendisliği
 socialLinks:
 - name: Email
   icon: "fas fa-envelope"
-  url: "mehmetaliozdogan@ayvansaray.edu.tr"
+  url: "mehmetaliozdogan@topkapi.edu.tr"
 
 - name: Github
   icon: "fab fa-github"
