--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -12,7 +12,7 @@ contactInfo:
 # some summary about what you do
 summary:
   - Yazılım Mühendisliği Öğrencisiyim
-  - Şu an Flutter öğreniyorum  
+  - Şu an React Native öğreniyorum  
   - Mobil programlama üzerinde çalışıyorum
   - Cross platformlar üzerinde çalışmayı seviyorum
   - Özgür uygulamalar geliştiriyorum
