--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -28,7 +28,7 @@ skills:
   
 - name: HTML/CSS
   logo: /images/sections/skills/Html-Css.png
-  summary: "Wordpress temaları ile istediğiniz ışık hızında çalışan e-commerge/kişisel web sitelerini sizin için kodlayabilirim."
+  summary: "Işık hızında çalışan e-ticaret/kişisel web sitelerini sizin için kodlayabilirim."
   url: "https://wordpress.com/"
 
 - name: React Native
