--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -36,7 +36,7 @@ socialLinks:
 
 - name: LinkedIn
   icon: "fab fa-linkedin"
-  url: "https://www.linkedin.com/in/mehmet-ali-%C3%B6zdo%C4%9Fan-b5704920b/"
+  url: "https://www.linkedin.com/in/mehmet-ali-ozdogan/"
 
 - name: Twitter
   icon: "fab fa-twitter"
