--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -21,23 +21,23 @@ buttons:
 
 # your projects
 projects:
-- name: Clash Of Clans
+- name: Chat Application
   logo: /images/sections/projects/cpp.png
   role: Developer
-  timeline: "September 2021 - January"
+  timeline: "September 2022 - February 2023"
   repo: https://github.com/Mehmet346/Clash-of-Clans # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
   summary: Clash Of clans game in cpp language.
-  tags: ["Beginner", "Clash Of Clans", "C++"]
+  tags: ["Beginner", "React Native", "JavaScript", "Firebase"]
 
-- name: script fotball animation
+- name: Knowledge competition
   logo: /images/sections/projects/JavaScript.png
   role: Developer
   timeline: "January 2022 - January 2022"
   repo: https://github.com/Mehmet346/little-fotball-game-script # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: script fotball game in Html/Css and JavaScript language.
-  tags: ["Beginner", "Html", "Css", "JavaScript"]
+  summary: Knowledge competition app in Dart language and Flutter framework.
+  tags: ["Beginner", "Dart", "Flutter", "Firebase"]
 
 - name: Object Detection
   logo: /images/sections/projects/py.png
