--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -27,7 +27,7 @@ projects:
   timeline: "September 2022 - February 2023"
   repo: https://github.com/Mehmet346/Clash-of-Clans # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: Chat App in React Native.I used firebase database and socket.io
+  summary: Chat App in React Native. I used firebase Realtime database, Authentication and socket.io
   tags: ["Beginner", "JavaScript", "React Native", "Firebase"]
 
 - name: Knowledge competition
