--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -28,7 +28,7 @@ projects:
   repo: https://github.com/Mehmet346/Clash-of-Clans # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
   summary: Chat App in React Native. I used firebase Realtime database, Authentication and socket.io
-  tags: ["Beginner", "JavaScript", "React Native", "Firebase"]
+  tags: ["JavaScript", "React Native", "Firebase"]
 
 - name: Knowledge Competition
   logo: /images/sections/skills/flutter.png
@@ -37,6 +37,6 @@ projects:
   repo: https://github.com/Mehmet346/flutter_Bilgi_Yarismasi # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
   summary: Knowledge competition app in Dart language and Flutter framework.
-  tags: ["Beginner", "Dart", "Flutter", "Firebase"]
+  tags: ["Dart", "Flutter", "Firebase"]
   
 
