--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -33,7 +33,7 @@ skills:
 
 - name: React Native
   logo: /images/sections/skills/React-Native.png
-  summary: "JavaScript'in React Native frameworkünü kullanıyorum. Formik,Yup,Axios,React Navigation yapısını projelerimde kullanıyorum. Firebase veritabanı ile çalışıyorum. Play Store markete uygulama yükleyebiliyorum."
+  summary: "JavaScript'in React Native frameworkünü kullanıyorum. Formik Yup Axios ve React Navigation yapısını projelerimde kullanıyorum. Firebase veritabanı ile çalışıyorum. Play Store markete uygulama yükleyebiliyorum."
   url: "https://reactnative.dev/"
   
 - name: Node.js
