--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -51,4 +51,11 @@ skills:
   summary: "Firebase veritabanı ile uygulamalarımın verilerini saklıyorum. Authenticate, Firestore database ve Realtime database yapılarını kullandım. Nosql veritabanı olarak kullanıyorum."
   url: "https://firebase.google.com/"
 
+- name: Near Protocol
+  logo: /images/sections/skills/Near.webp
+  summary: "Near Geliştirici Sertifikasına sahibim. Near ağı üzerinde Web 3.0 çözümleri üretebiliyorum. Rust dilinde Smart Contract oluşturup Web projelerine entegre edebiliyorum. Backend olarak Rust, frontend olarak React kullanıyorum."
+  url: "https://near.org/"
+
+
+
 
