--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -40,7 +40,7 @@ projects:
   tags: ["Dart", "Flutter", "Firebase"]
 
 - name: Web 3.0
-  logo: /images/sections/skills/Near.webp
+  logo: /images/sections/skills/Near.png
   role: Developer
   timeline: "February 2023"
   repo:  https://github.com/Mehmet346/# If your project is a public repo on GitHub, then provide this link. it will show star count.
