--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -25,7 +25,7 @@ projects:
   logo: /images/sections/skills/React-Native.png
   role: Developer
   timeline: "September 2022 - February 2023"
-  repo: https://github.com/Mehmet346/Clash-of-Clans # If your project is a public repo on GitHub, then provide this link. it will show star count.
+  repo: https://github.com/Mehmet346/Chat-Uygulamasi # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
   summary: React Native kullanarak yazıp Play Store'da yayınladım. Kimlik doğrulama,kayıt olma kısmı ve sohbet odaları olkuşturdum. Firebase gerçek zamanlı veritabanı ve Socket.io kullandım.
   tags: ["JavaScript", "React Native", "Firebase"]
@@ -46,6 +46,6 @@ projects:
   repo:  https://github.com/Mehmet346/# If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
   summary: Yakında...
-  tags: ["React", "Node.js", "Firebase", "Near Protocol"]
+  tags: ["React", "Rust", "Firebase", "Near Protocol"]
   
 
