--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -27,7 +27,7 @@ projects:
   timeline: "September 2022 - February 2023"
   repo: https://github.com/Mehmet346/Chat-Uygulamasi # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: React Native kullanarak yazıp Play Store'da yayınladım. Kimlik doğrulama,kayıt olma kısmı ve sohbet odaları olkuşturdum. Firebase gerçek zamanlı veritabanı ve Socket.io kullandım.
+  summary: React Native kullanarak yazıp Play Store'da yayınladım. Kimlik doğrulama, kayıt olma kısmı ve sohbet odaları oluşturdum. Firebase gerçek zamanlı veritabanı ve Socket.io kullandım.
   tags: ["JavaScript", "React Native", "Firebase"]
 
 - name: Bilgi Yarışması
@@ -36,7 +36,7 @@ projects:
   timeline: "January 2022 - January 2022"
   repo: https://github.com/Mehmet346/flutter_Bilgi_Yarismasi # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: Flutter'da zorluk derecelerine göre kategorilendirilmiş Bilgi yarışması uygulaması yazdım. Firebase veritabanını kullandım.
+  summary: Flutter'da zorluk derecelerine göre kategorilendirilmiş bilgi yarışması uygulaması yazdım. Firebase veritabanını kullandım.
   tags: ["Dart", "Flutter", "Firebase"]
 
 - name: Web 3.0
