--- a/data/en/sections/achievements.yaml
+++ b/data/en/sections/achievements.yaml
@@ -10,8 +10,8 @@ section:
 
 # Your achievements achievements
 achievements:
-- title: Best Presenter
-  image: /images/sections/achievements/presenter.jpg
+- title: Near Certified Developer
+  image: /images/sections/achievements/Near_Certified_Developer.jfif
   summary: Best presenter in the 2020 XYZ conference.
 - title: Champion
   image: /images/sections/achievements/sport.jpg
