--- a/data/en/sections/achievements.yaml
+++ b/data/en/sections/achievements.yaml
@@ -12,7 +12,7 @@ section:
 achievements:
 - title: Near Certified Developer
   image: /images/sections/achievements/Near_Certified_Developer.jfif
-  summary: Best presenter in the 2020 XYZ conference.
+  summary: I presented my developed application and was eligible to receive Nft a Near Developer Certificate.
 - title: Champion
   image: /images/sections/achievements/sport.jpg
   summary: Champion in cycling inter-city cycling championship 2020.
