--- a/data/en/sections/achievements.yaml
+++ b/data/en/sections/achievements.yaml
@@ -11,7 +11,7 @@ section:
 # Your achievements achievements
 achievements:
 - title: Near Certified Developer
-  image: /images/sections/achievements/Near_Certified_Developer.jfif
+  image: /images/sections/achievements/Near-Certified-Developer.jpg
   summary: I presented my developed application and was eligible to receive Nft a Near Developer Certificate.
 - title: Champion
   image: /images/sections/achievements/sport.jpg
