--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -11,14 +11,14 @@ section:
 designation: Yazılım Mühendisi
 # your company information
 company:
-  name: "null"
-  url: "null"
+  name: "SaveAs Yazılım"
+  url: "https://www.saveas.com.tr/"
 
 # your resume. this file path should be relative to you "static" directory
 resume: "files/resume.pdf"
 
 # a summary about you
-summary: "Şu anda İstanbul Topkapı Üniversitesi'nde Yazılım Mühendisliği öğrenimime devam ediyorum. Takım çalışmasını seven, liderlik konusunda sorumluluk alabilen birisiyim. Gelişime açık, dinamik ve her zaman ideallerine ulaşmak için çabalayan bir Yazılım Mühendisi adayıyım."
+summary: "Şu anda İstanbul Topkapı Üniversitesi'nde Yazılım Mühendisliği öğrenimime devam ediyorum. SaveAs Yazılım şirketinde mobil geliştirici olarak çalışıyorum. Takım çalışmasını seven, liderlik konusunda sorumluluk alabilen birisiyim. Gelişime açık, dinamik ve her zaman ideallerine ulaşmak için çabalayan bir Yazılım Mühendisi adayıyım."
 # your social links
 # give as many as you want. use font-awesome for the icons.
 socialLinks:
