--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -1,25 +1,25 @@
 ## section information
-#section:
-#  name: Deneyimler
-#  id: experiences
-#  enable: true
-#  weight: 3
-#  showOnNavbar: true
-#  # Can optionally hide the title in sections
-#  # hideTitle: true 
+section:
+  name: Deneyimler
+  id: experiences
+  enable: true
+  weight: 3
+  showOnNavbar: true
+  # Can optionally hide the title in sections
+  # hideTitle: true 
 
 ## Your experiences
-#experiences:
-#- company:
-#    name: "A-101 Yeni Mağazacılık A.Ş."
-#    url: "https://www.a101.com.tr"
-#    location: "İstanbul"
-#    overview: "Perakende satış sektörünün öncülerinden 10000'den fazla mağazasıyla Türkiye'nin ileri gelen market zinciri."
-#  positions:
-#  - designation: Mağaza Temsilcisi
-#    start: Ağu 2020
-#    end: Kas 2021
-#    responsibilities:
-#    - Mağaza düzeninin takibi.
-#    - Personel yönetimi.
-#    - Gelir, gider, kasa hesap takibi.
+experiences:
+- company:
+    name: "SaveAs Yazılım A.Ş"
+    url: "https://www.saveas.com.tr/"
+    location: "İstanbul"
+    overview: "Perakende satış sektörünün öncülerinden 10000'den fazla mağazasıyla Türkiye'nin ileri gelen market zinciri."
+  positions:
+  - designation: Mobile Developer - (React Native)
+    start: Ocak 2023
+    end: Devam
+    responsibilities:
+    - Hataların Giderilmesi.
+    - Yeni özelliklerin eklenmesi.
+    - Optimizasyonların yapılması.
