--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -20,6 +20,6 @@ experiences:
     start: Ocak 2023
     end: Devam
     responsibilities:
-    - Hataların Giderilmesi.
+    - Uygulama hatalarının giderilmesi.
     - Yeni özelliklerin eklenmesi.
     - Optimizasyonların yapılması.
