--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -14,7 +14,7 @@ experiences:
     name: "SaveAs Yazılım A.Ş"
     url: "https://www.saveas.com.tr/"
     location: "İstanbul"
-    overview: "Saveas Yazılım olarak bizler, yoğunluklu kurumsal yazılım geliştirme ve dijital dönüşüm hizmetleri veren bir teknoloji firmasıyız. Şimdiye kadar başarıyla tamamladığımız yüzlerce yazılım projesi, hergün yüzbinlerce ziyaretçiye hizmet veren dev içerik siteleri, e-ticaret siteleri, mobil uygulama projeleri, holdinglerden kobilere kadar hizmet veren kurumsal kaynak planlama projelerimiz, sayısı onbinleri bulan dijital içerik dönüşümleri ile çalışmalarımıza devam etmekteyiz."
+    overview: "Saveas Yazılım, yazılım geliştirme ve dijital dönüşüm hizmetleri veren bir teknoloji firmasıdır. Şimdiye kadar başarıyla tamamladığı yüzlerce yazılım projesi, e-ticaret siteleri, mobil uygulama projeleri, holdinglerden kobilere kadar hizmet veren kurumsal kaynak planlama projeleri ile çalışmalarına devam etmektedir."
   positions:
   - designation: Mobile Developer - (React Native)
     start: Ocak 2023
