--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -55,10 +55,10 @@ badges:
    url: "https://solana.com/tr"
    badge: "https://solana.com/src/img/branding/solanaLogo.svg"
 
-# - type: certification
-#   name: Istio and IBM Cloud Kubernetes Service
-#  url: "https://www.credly.com/org/the-linux-foundation/badge/exam-developer-certified-kubernetes-security-specialist"
-#   badge: "https://images.credly.com/size/680x680/images/8d34d489-84bf-4861-a4a0-9e9d68318c5c/Beyond_basics_of_Istio_on_Cloud_v2.png"
+ - type: certification
+   name: Near certified developer
+   url: "https://near.org/"
+   badge: "https://near.org/wp-content/uploads/2021/09/brand-stack-300x300.png"
 
 # - type: certification
 #   name: Artificial Intelligence and Machine Learning
