--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -53,7 +53,7 @@ badges:
 - type: certification
   name: Solana hacker house istanbul
   url: "https://solana.com/tr"
-  badge: "/assets/images/sections/achievements/Near-Certified-Developer.jpg"
+  badge: "https://solana.com/src/img/branding/solanaLogo.png"
 
 - type: certification
   name: Near certified developer
